# DDOS-Attack-Detection

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  release.yml
configs/: config.yaml
k8s/: deployment.yaml  hpa.yaml  service.yaml
src/: predict.py  train.py
src/api/: auth.py  main.py  model_registry.py  routes.py  schemas.py
src/api/middleware/: metrics.py
src/data/: preprocessor.py
src/models/: ann_model.py  cnn_lstm_model.py  ensemble.py  kmeans_model.py  random_forest_model.py
src/utils/: drift_detector.py  explainer.py  logger.py  metrics.py  visualizer.py
terraform/: ecr.tf  ecs.tf  main.tf  networking.tf  outputs.tf  variables.tf
tests/: test_api.py  test_models.py  test_preprocessor.py
